@@ -156,3 +156,6 @@ validation_after_every_postsolving_step = 0
 
 # defines the offset for bound tightening
 bound_tightening_offset = 0.0001
+
+# PaPILO resumes with the next higher complexity class if the last n rounds only consisted of bound changes (-1 deactivated) [Integer: [-1,2147483647]]
+ max_consecutive_rounds_of_only_bound_changes = 500
