@@ -10,6 +10,7 @@ Interface changes
 -----------------
 
 ### New parameters with default values
+- max_consecutive_rounds_of_only_bound_changes = 500: PaPILO resumes with the next higher complexity class if the last n rounds only consisted of bound changes
 
 ### Data structures
 
